feat: paginação para consultas de usuários por nome
